- Added user configurable output channels
- Added sound file presets
- Fixed bug causing conflicts between saved preset maps
- Added control preference menu
- Added option to disable clipping (hard-limiting) of sound output
- Added option to change scan begin behavior
- Added MIDI control to Morph Time
- Improved int parameter snapping.
- Windows compilation instructions.
- BREAKING CHANGE FOR WINDOWS: Moved configuration folder from ~/EmissionControl2 -> ~/Music/EmissionControl2
  - Reasoning: Aligns with OSX Semantics.
  - Fix: Simply copy your folder to the new location if you want to save your presets and settings.

Version 1.2 Changelog:

- Added OSC support (see manual for documentation)
- Updated manual with OSC documentation
- Added option to change buffer size
- Improved look of presets panel when the window is small
- Added keyboard shortcut for starting/stopping the sound engine (Spacebar)
- Added "Clear All Sound Files" option in Sound Files menu
- Improved the VU meter (now shows DBFS instead of linear amplitude)
- Rolled fonts into binary
- Fixed bug where recording didn't work if file name didn't end in ".wav" (Issue #100). Created checker that appends .wav if missing.
- Various other small bugs squashed
- Linux only: added an installer for a version of EC2 without JACK (for better Pipewire compatibility)
- BREAKING CHANGE FOR LINUX: fixed an issue with the saving of presets
  - Fix: run the script 'linux_preset_migrate.sh' to automatically rename and move the affected presets

Version 1.3 Changelog:

- Added sensible default OSC address values that correspond to the parameter names (faster to get started, user can still change the OSC address for any parameter)
- Fixed a rounding bug in outputValInRange
- Fixed a bug in OSC input for mod controls, lfo controls, and morph time
- Fixed bug where keyboard shortcuts (like pressing spacebar to start/stop the engine) were triggered while inputting text in a text field